Cambiar devolución 'id' dereservation a objeto reservation. Solución de errores con reservas. Retirada de mensajes de error con información sensible. Agregados mensajes de error amigables. Mejora en respuesta de búsqueda.
